--- a/MomCallUToEat/MainForm.resx
+++ b/MomCallUToEat/MainForm.resx
@@ -126,26 +126,94 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="notifyIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAADMzMwAzMzMJMzMzSDMzM5kzMzPbMzMz+TMzM/kzMzPbMzMzmTMzM0gzMzMJMzMzAAAA
-        AAAAAAAAAAAAADMzMwAzMzMdMzMzjjMzM+gzMzP/MzMz8zMzM98zMzPfMzMz8zMzM/8zMzPoMzMzjjMz
-        Mx0zMzMAAAAAADMzMwAzMzMeMzMzsTMzM/4zMzPrMzMzmjMzM1QzMzMtMzMzLTMzM1QzMzOaMzMz6zMz
-        M/4zMzOxMzMzHjMzMwAzMzMIMzMzjjMzM/8zMzPXMzMzTzMzMwkzMzMAAAAAAAAAAAAzMzMAMzMzCTMz
-        M08zMzPXMzMz/zMzM44zMzMIMzMzSTMzM+gzMzPsMzMzTzMzMwAzMzMAAAAAAAAAAAAAAAAAAAAAADMz
-        MwAzMzMAMzMzTzMzM+wzMzPoMzMzSDMzM54zMzP/MzMzmjMzMwkzMzMAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAMzMzADMzMwkzMzOaMzMz/zMzM5kzMzPaMzMz8zMzM1QzMzMAMzMzAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAADMzMwAzMzMAMzMzVDMzM/MzMzPaMzMz+zMzM98zMzMtMzMzAAAAAAAzMzMAMzMzFzMz
-        M4MzMzODMzMzFzMzMwAAAAAAMzMzADMzMy0zMzPfMzMz+zMzM/szMzPfMzMzLTMzMwAAAAAAMzMzADMz
-        Mz8zMzP5MzMz+TMzMz8zMzMAAAAAADMzMwAzMzMtMzMz3zMzM/szMzPaMzMz8zMzM1QzMzMAMzMzADMz
-        MwAzMzNCMzMz/TMzM/0zMzNCMzMzADMzMwAzMzMAMzMzVDMzM/MzMzPaMzMznjMzM/8zMzOaMzMzCTMz
-        MwAzMzMAMzMzQjMzM/0zMzP9MzMzQjMzMwAzMzMAMzMzCTMzM5ozMzP/MzMznjMzM0kzMzPoMzMz7DMz
-        M08zMzMAMzMzADMzM0IzMzP9MzMz/TMzM0IzMzMAMzMzADMzM08zMzPsMzMz6DMzM0kzMzMIMzMzjjMz
-        M/8zMzPXMzMzPzMzMwAzMzNCMzMz/TMzM/0zMzNCMzMzADMzM0EzMzPXMzMz/zMzM44zMzMIMzMzADMz
-        Mx4zMzOxMzMz/jMzM40zMzMAMzMzQjMzM/0zMzP9MzMzQjMzMwAzMzORMzMz/jMzM7EzMzMeMzMzAAAA
-        AAAzMzMAMzMzHjMzM2gzMzM1MzMzADMzM0kzMzP9MzMz/TMzM0IzMzMAMzMzNTMzM2gzMzMeMzMzAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAMzMzADMzMwAzMzMyMzMz4zMzM+MzMzMuMzMzAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAA4AcAAMADAACAAQAAA8AAAA/wAAAP8AAAH/gAABw4AAAcOAAAHDgAAAwwAAAMMAAABCAAAIQh
-        AADEIwAA/D8AAA==
+        AAABAAEAGBgAAAEAIACICQAAFgAAACgAAAAYAAAAMAAAAAEAIAAAAAAAAAkAAHQSAAB0EgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/QENkP0LjZD9Hk2Q/S8NkP05TZD9PU2Q/T2NkP05jZD
+        9L82Q/R9NkP0MTZD9AQ2Q/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA2Q/QANkP0ADZD
+        9CY2Q/SQNkP05TZD9Ps2Q/TnNkP0yDZD9LU2Q/S1NkP0xzZD9OY2Q/T7NkP05zZD9JQ2Q/QpNkP0ADZD
+        9AAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/QDNkP0UzZD9Nk2Q/T5NkP0uTZD9Fw2Q/QhNkP0DTZD
+        9Aw2Q/QMNkP0DTZD9CA2Q/RZNkP0tjZD9Pg2Q/TcNkP0WTZD9AM2Q/QAAAAAAAAAAAAAAAAANkP0ADZD
+        9AI2Q/RlNkP07zZD9N42Q/ReNkP0CzZD9CI2Q/RmNkP0nTZD9Lk2Q/S6NkP0nzZD9Gk2Q/QkNkP0CjZD
+        9Fk2Q/TbNkP08TZD9Gs2Q/QDNkP0AAAAAAA2Q/QANkP0ADZD9FI2Q/TvNkP0zzZD9DQ2Q/QSNkP0fzZD
+        9OM2Q/T9NkP07DZD9Nc2Q/TXNkP06zZD9P02Q/TmNkP0hDZD9BU2Q/QvNkP0yzZD9PE2Q/RZNkP0ADZD
+        9AA2Q/QANkP0JTZD9NY2Q/TfNkP0NjZD9B82Q/S1NkP0/DZD9MM2Q/RiNkP0KTZD9BQ2Q/QUNkP0JzZD
+        9F82Q/TANkP0+zZD9Ls2Q/QkNkP0MDZD9No2Q/TbNkP0KjZD9AA2Q/QBNkP0jDZD9Po2Q/RiNkP0EzZD
+        9LQ2Q/T4NkP0hzZD9BM2Q/QANkP0AAAAAAAAAAAANkP0ADZD9AA2Q/QRNkP0gTZD9Pc2Q/S7NkP0FjZD
+        9Fo2Q/T5NkP0lDZD9AM2Q/QqNkP04TZD9L42Q/QPNkP0fDZD9Pw2Q/SINkP0BzZD9AAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAA2Q/QANkP0BTZD9IE2Q/T8NkP0hTZD9A02Q/S2NkP05jZD9DE2Q/RzNkP0+zZD
+        9GQ2Q/QgNkP03zZD9MY2Q/QVNkP0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANkP0ADZD
+        9BI2Q/S/NkP05DZD9CU2Q/RbNkP0+jZD9Hw2Q/S0NkP06zZD9Cg2Q/RfNkP0/DZD9Gg2Q/QANkP0ADZD
+        9AA2Q/QANkP0GjZD9F02Q/RfNkP0HDZD9AA2Q/QANkP0ADZD9AA2Q/RfNkP0/DZD9Gg2Q/QiNkP05jZD
+        9L42Q/TdNkP00DZD9BA2Q/SVNkP07zZD9C42Q/QAAAAAADZD9AA2Q/QYNkP0uTZD9P02Q/T+NkP0vjZD
+        9Bw2Q/QAAAAAADZD9AA2Q/QoNkP06zZD9J42Q/QONkP0yTZD9OY2Q/TvNkP0vzZD9Aw2Q/SuNkP03jZD
+        9Bo2Q/QAAAAAADZD9AA2Q/RXNkP0/DZD9JQ2Q/SNNkP0/DZD9F42Q/QAAAAAADZD9AA2Q/QUNkP01zZD
+        9Lk2Q/QMNkP0tjZD9PU2Q/TvNkP0vzZD9Aw2Q/SuNkP03zZD9Bo2Q/QAAAAAADZD9AA2Q/RnNkP0/TZD
+        9E02Q/RANkP0+TZD9HA2Q/QAAAAAADZD9AA2Q/QVNkP01zZD9Lk2Q/QMNkP0tzZD9PU2Q/TcNkP00TZD
+        9BE2Q/SUNkP08DZD9DA2Q/QAAAAAADZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QAAAAAADZD
+        9AA2Q/QqNkP07DZD9J02Q/QONkP0yjZD9OU2Q/SyNkP07DZD9Ck2Q/RdNkP0/DZD9Gs2Q/QANkP0ADZD
+        9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0ADZD9AA2Q/RjNkP0/DZD9GY2Q/QjNkP05zZD
+        9Lw2Q/RwNkP0+zZD9Gc2Q/QeNkP03TZD9Mo2Q/QYNkP0ADZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD
+        9HA2Q/QANkP0ADZD9BQ2Q/TDNkP04jZD9CM2Q/RfNkP0+zZD9Hk2Q/QoNkP03zZD9ME2Q/QQNkP0eDZD
+        9Pw2Q/SONkP0CDZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0BjZD9IY2Q/T8NkP0gDZD
+        9A02Q/S5NkP05DZD9C42Q/QBNkP0hzZD9Ps2Q/RnNkP0ETZD9K82Q/T4NkP0YTZD9AA2Q/RnNkP0/TZD
+        9E02Q/Q/NkP0+TZD9HA2Q/QANkP0WjZD9Pc2Q/S1NkP0FDZD9GA2Q/T6NkP0kDZD9AI2Q/QANkP0IjZD
+        9NI2Q/TjNkP0OjZD9C82Q/TtNkP0qDZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0nTZD
+        9PE2Q/Q2NkP0MzZD9N42Q/TYNkP0JjZD9AA2Q/QANkP0ADZD9E02Q/TsNkP02DZD9Kk2Q/T5NkP0iTZD
+        9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0gDZD9Po2Q/SsNkP01DZD9O82Q/RUNkP0ADZD
+        9AAAAAAANkP0ADZD9AI2Q/RcNkP02DZD9O82Q/SxNkP0IjZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD
+        9HA2Q/QANkP0HjZD9Kw2Q/TuNkP02zZD9GE2Q/QDNkP0AAAAAAAAAAAAAAAAADZD9AA2Q/QBNkP0GzZD
+        9Cs2Q/QNNkP0ADZD9AA2Q/RjNkP0/jZD9F02Q/RTNkP0/DZD9Gw2Q/QANkP0ADZD9Aw2Q/QqNkP0HDZD
+        9AI2Q/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/Q3NkP06TZD
+        9OE2Q/TfNkP07TZD9D02Q/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/QDNkP0aDZD9N42Q/ThNkP0bzZD9AU2Q/QAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AD8A+AAPAOAABwDAAAMAwAADAIAAAQAAfgAAAP8AAAH/
+        gAADw8AAA4HAAAOBwAADgcAAA4HAAAOBwAABgYAAAIEAAACBAACAgQEAwIEDAMCBAwDhgYcA/4H/AP+B
+        /wA=
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAGBgAAAEAIACICQAAFgAAACgAAAAYAAAAMAAAAAEAIAAAAAAAAAkAAHQSAAB0EgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/QENkP0LjZD9Hk2Q/S8NkP05TZD9PU2Q/T2NkP05jZD
+        9L82Q/R9NkP0MTZD9AQ2Q/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA2Q/QANkP0ADZD
+        9CY2Q/SQNkP05TZD9Ps2Q/TnNkP0yDZD9LU2Q/S1NkP0xzZD9OY2Q/T7NkP05zZD9JQ2Q/QpNkP0ADZD
+        9AAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/QDNkP0UzZD9Nk2Q/T5NkP0uTZD9Fw2Q/QhNkP0DTZD
+        9Aw2Q/QMNkP0DTZD9CA2Q/RZNkP0tjZD9Pg2Q/TcNkP0WTZD9AM2Q/QAAAAAAAAAAAAAAAAANkP0ADZD
+        9AI2Q/RlNkP07zZD9N42Q/ReNkP0CzZD9CI2Q/RmNkP0nTZD9Lk2Q/S6NkP0nzZD9Gk2Q/QkNkP0CjZD
+        9Fk2Q/TbNkP08TZD9Gs2Q/QDNkP0AAAAAAA2Q/QANkP0ADZD9FI2Q/TvNkP0zzZD9DQ2Q/QSNkP0fzZD
+        9OM2Q/T9NkP07DZD9Nc2Q/TXNkP06zZD9P02Q/TmNkP0hDZD9BU2Q/QvNkP0yzZD9PE2Q/RZNkP0ADZD
+        9AA2Q/QANkP0JTZD9NY2Q/TfNkP0NjZD9B82Q/S1NkP0/DZD9MM2Q/RiNkP0KTZD9BQ2Q/QUNkP0JzZD
+        9F82Q/TANkP0+zZD9Ls2Q/QkNkP0MDZD9No2Q/TbNkP0KjZD9AA2Q/QBNkP0jDZD9Po2Q/RiNkP0EzZD
+        9LQ2Q/T4NkP0hzZD9BM2Q/QANkP0AAAAAAAAAAAANkP0ADZD9AA2Q/QRNkP0gTZD9Pc2Q/S7NkP0FjZD
+        9Fo2Q/T5NkP0lDZD9AM2Q/QqNkP04TZD9L42Q/QPNkP0fDZD9Pw2Q/SINkP0BzZD9AAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAA2Q/QANkP0BTZD9IE2Q/T8NkP0hTZD9A02Q/S2NkP05jZD9DE2Q/RzNkP0+zZD
+        9GQ2Q/QgNkP03zZD9MY2Q/QVNkP0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANkP0ADZD
+        9BI2Q/S/NkP05DZD9CU2Q/RbNkP0+jZD9Hw2Q/S0NkP06zZD9Cg2Q/RfNkP0/DZD9Gg2Q/QANkP0ADZD
+        9AA2Q/QANkP0GjZD9F02Q/RfNkP0HDZD9AA2Q/QANkP0ADZD9AA2Q/RfNkP0/DZD9Gg2Q/QiNkP05jZD
+        9L42Q/TdNkP00DZD9BA2Q/SVNkP07zZD9C42Q/QAAAAAADZD9AA2Q/QYNkP0uTZD9P02Q/T+NkP0vjZD
+        9Bw2Q/QAAAAAADZD9AA2Q/QoNkP06zZD9J42Q/QONkP0yTZD9OY2Q/TvNkP0vzZD9Aw2Q/SuNkP03jZD
+        9Bo2Q/QAAAAAADZD9AA2Q/RXNkP0/DZD9JQ2Q/SNNkP0/DZD9F42Q/QAAAAAADZD9AA2Q/QUNkP01zZD
+        9Lk2Q/QMNkP0tjZD9PU2Q/TvNkP0vzZD9Aw2Q/SuNkP03zZD9Bo2Q/QAAAAAADZD9AA2Q/RnNkP0/TZD
+        9E02Q/RANkP0+TZD9HA2Q/QAAAAAADZD9AA2Q/QVNkP01zZD9Lk2Q/QMNkP0tzZD9PU2Q/TcNkP00TZD
+        9BE2Q/SUNkP08DZD9DA2Q/QAAAAAADZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QAAAAAADZD
+        9AA2Q/QqNkP07DZD9J02Q/QONkP0yjZD9OU2Q/SyNkP07DZD9Ck2Q/RdNkP0/DZD9Gs2Q/QANkP0ADZD
+        9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0ADZD9AA2Q/RjNkP0/DZD9GY2Q/QjNkP05zZD
+        9Lw2Q/RwNkP0+zZD9Gc2Q/QeNkP03TZD9Mo2Q/QYNkP0ADZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD
+        9HA2Q/QANkP0ADZD9BQ2Q/TDNkP04jZD9CM2Q/RfNkP0+zZD9Hk2Q/QoNkP03zZD9ME2Q/QQNkP0eDZD
+        9Pw2Q/SONkP0CDZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0BjZD9IY2Q/T8NkP0gDZD
+        9A02Q/S5NkP05DZD9C42Q/QBNkP0hzZD9Ps2Q/RnNkP0ETZD9K82Q/T4NkP0YTZD9AA2Q/RnNkP0/TZD
+        9E02Q/Q/NkP0+TZD9HA2Q/QANkP0WjZD9Pc2Q/S1NkP0FDZD9GA2Q/T6NkP0kDZD9AI2Q/QANkP0IjZD
+        9NI2Q/TjNkP0OjZD9C82Q/TtNkP0qDZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0nTZD
+        9PE2Q/Q2NkP0MzZD9N42Q/TYNkP0JjZD9AA2Q/QANkP0ADZD9E02Q/TsNkP02DZD9Kk2Q/T5NkP0iTZD
+        9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD9HA2Q/QANkP0gDZD9Po2Q/SsNkP01DZD9O82Q/RUNkP0ADZD
+        9AAAAAAANkP0ADZD9AI2Q/RcNkP02DZD9O82Q/SxNkP0IjZD9AA2Q/RnNkP0/TZD9E02Q/Q/NkP0+TZD
+        9HA2Q/QANkP0HjZD9Kw2Q/TuNkP02zZD9GE2Q/QDNkP0AAAAAAAAAAAAAAAAADZD9AA2Q/QBNkP0GzZD
+        9Cs2Q/QNNkP0ADZD9AA2Q/RjNkP0/jZD9F02Q/RTNkP0/DZD9Gw2Q/QANkP0ADZD9Aw2Q/QqNkP0HDZD
+        9AI2Q/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/Q3NkP06TZD
+        9OE2Q/TfNkP07TZD9D02Q/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADZD9AA2Q/QDNkP0aDZD9N42Q/ThNkP0bzZD9AU2Q/QAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AD8A+AAPAOAABwDAAAMAwAADAIAAAQAAfgAAAP8AAAH/
+        gAADw8AAA4HAAAOBwAADgcAAA4HAAAOBwAABgYAAAIEAAACBAACAgQEAwIEDAMCBAwDhgYcA/4H/AP+B
+        /wA=
 </value>
   </data>
 </root>
